<resources>
    <string name="app_name" translatable="false">LG CATS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="shared_prefs">MyPrefsFile</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_submit_joke_of_the_day">SubmitJokeOfTheDayActivity</string>
    <string name="title_activity_colleges_list">CollegesListActivity</string>
    <string name="title_activity_hotlines">HotlinesActivity</string>
    <string name="title_activity_announcements">AnnouncementsActivity</string>
    <string name="announcements">Announcements</string>
    <string name="canvas">Canvas</string>
    <string name="student_id">Student ID</string>
    <string name="clubs">Clubs</string>
    <string name="colleges">Colleges</string>
    <string name="hotlines">Hotlines</string>
    <string name="title_activity_student_id">StudentIDActivity</string>
    <string name="title_activity_clubs_list">ClubsListActivity</string>
    <string name="title_activity_clubs_detail">ClubsListActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="twitter" translatable="false">Twitter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="canvas_grades_link">https://lgsuhsd.instructure.com/grades</string>
    <string name="calendar">Calendar</string>
    <string name="twitter_web_link" translatable="false">https://twitter.com/hashtag/golgcats?src=hash</string>
    <string name="twitter_app_link" translatable="false">twitter://hashtag/golgcats?src=hash</string>
    <string name="golgcats">#golgcats</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="your_name_here">Your name here</string>
    <string name="your_ID_here">Your ID here</string>
    <string name="your_grade_here">Your grade here</string>
    <string name="barcode_start">"*P "</string>
    <string name="barcode_end">"*"</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="block_1">1, 2</string>
    <string name="block_2">3, 4</string>
    <string name="block_3">5, 6</string>
    <string name="block_4">7</string>
    <string name="tutorial">Tutorial</string>
    <string name="lunch">Lunch</string>
    <string name="bell_schedule_header">Standard Bell Schedule</string>
    <string name="school_calendar">School Calendar</string>
    <string name="logout">Logout</string>
    <string name="about_app">About LG CATS</string>
    <string name="title_activity_announcement_detail">""</string>
    <string name="title_activity_student_login">Student Login</string>
    <string name="title_activity_select_user_type">SelectUserTypeActivity</string>
    <string name="title_activity_colleges_detail">CollegesDetailActivity</string>
    <string name="countdown_calendar">Countdown Calendar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quick_links">Quick Links</string>
    <string name="students">Students</string>
    <string name="departments">Departments</string>
    <string name="parents">Parents</string>
    <string name="orange_day">It\'s an Orange Day!</string>
    <string name="black_day">It\'s a Black Day!</string>
    <string name="title_activity_countdown">CountdownActivity</string>
</resources>
