<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sjf.lgcats.MainFragment"
    tools:showIn="@layout/app_bar_main"
    android:id="@+id/fragment_main_frame_layout">

    <ScrollView
        android:id="@+id/main_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:id="@+id/main_linear_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark"
            android:weightSum="1">

            <Button
                android:id="@+id/main_announcement_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/announcements" />

            <Button
                android:id="@+id/main_countdown_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/countdown_calendar" />

            <Button
                android:id="@+id/main_canvas_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/canvas" />

            <Button
                android:id="@+id/main_calendar_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/calendar" />

            <Button
                android:id="@+id/main_studentID_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/student_id" />

            <TextView
                android:id="@+id/main_black_border_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin"
                android:background="@color/black" />

            <Button
                android:id="@+id/main_clubsList_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/clubs" />

            <Button
                android:id="@+id/main_collegesList_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/colleges" />

            <TextView
                android:id="@+id/main_black_border_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin"
                android:background="@color/black" />

            <Button
                android:id="@+id/main_hotlines_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/hotlines" />

            <TextView
                android:id="@+id/main_black_border_3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin"
                android:background="@color/black" />

            <Button
                android:id="@+id/main_LGHSTwitterFeed_button"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="1dp"
                android:background="@color/colorPrimary"
                android:text="@string/golgcats"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/main_black_border_4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin"
                android:background="@color/black" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
