<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sjf.lgcats.CalendarActivity"
    tools:showIn="@layout/activity_calendar"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:id="@+id/calendar_scroll_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark">

            <Button
                android:id="@+id/calendar_calendar_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:text="@string/school_calendar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/calendar_bell_schedule_header"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"/>

            <TextView
                android:id="@+id/calendar_bell_schedule_header"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:text="@string/bell_schedule_header"
                app:layout_constraintTop_toBottomOf="@+id/calendar_calendar_button"
                app:layout_constraintBottom_toTopOf="@+id/calendar_bell_schedule_block_1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"/>

            <TextView
                android:id="@+id/calendar_bell_schedule_block_1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:text="@string/block_1"
                app:layout_constraintTop_toBottomOf="@+id/calendar_bell_schedule_header"
                app:layout_constraintBottom_toTopOf="@+id/calendar_bell_schedule_tutorial"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"/>

            <TextView
                android:id="@+id/calendar_bell_schedule_tutorial"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:text="@string/tutorial"
                app:layout_constraintTop_toBottomOf="@+id/calendar_bell_schedule_block_1"
                app:layout_constraintBottom_toTopOf="@+id/calendar_bell_schedule_block_2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"/>

            <TextView
                android:id="@+id/calendar_bell_schedule_block_2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:text="@string/block_2"
                app:layout_constraintTop_toBottomOf="@+id/calendar_bell_schedule_tutorial"
                app:layout_constraintBottom_toTopOf="@+id/calendar_bell_schedule_lunch"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"/>

            <TextView
                android:id="@+id/calendar_bell_schedule_lunch"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:text="@string/lunch"
                app:layout_constraintTop_toBottomOf="@+id/calendar_bell_schedule_block_2"
                app:layout_constraintBottom_toTopOf="@+id/calendar_bell_schedule_block_3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"/>

            <TextView
                android:id="@+id/calendar_bell_schedule_block_3"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:text="@string/block_3"
                app:layout_constraintTop_toBottomOf="@+id/calendar_bell_schedule_lunch"
                app:layout_constraintBottom_toTopOf="@+id/calendar_bell_schedule_block_4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"/>

            <TextView
                android:id="@+id/calendar_bell_schedule_block_4"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="360dp"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:text="@string/block_4"
                app:layout_constraintTop_toBottomOf="@+id/calendar_bell_schedule_block_3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteX="0dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
